--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@thirdweb-dev/sdk": "^4",
     "ethers": "^5",
     "framer-motion": "^10.16.16",
+    "lottie-react": "^2.4.0",
     "next": "^13",
     "nextjs-progressbar": "^0.0.16",
     "react": "^18.2",
